--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,6 +34,6 @@ jobs:
        - uses: actions/checkout@v2
        - uses: akhileshns/heroku-deploy@v3.0.4 # This is the action
          with:
-           heroku_api_key: ${{secrets.03007775-49f4-453b-a2dd-5bdf450fb04f}}
+           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
            heroku_app_name: "monstrao" # Must be unique in Heroku
            heroku_email: "brunoo@gmail.com"
